1.2.0 to 1.2.1
----------------------------------------------------------------------
- Have build.sh prefer the JRE at $JAVA_HOME/bin/java if JAVA_HOME is set.
  Bug 1154.  Thanks Chris Abernethy <opennms@obado.net>.
- Clean up the text of the <fail> tasks in build.xml so they are more clear.
  Bug 1155.  Thanks Chris Abernethy <opennms@obado.net>.
- Add Poll outage editor contributed by Craig Miskell.
- Fixed an issue with Unresponsive services being considered up
  even with unresponsiveness set to false. Bug 1151.
- Added a focus to the add interface page. Bug 1148. Thx Craig.
- Added a Linksys event to stop stupid connection traps.
- Addressed issue with DHCP poller not closing connections. Bug 1101
  Thx Bill.
- Added XMPP Notifications (Jabber) to OpenNMS. Bug 1168. Thanks Chris
- Added the ability to gather and display SNMP text properties in 
  reports. Bug 1115. Thx Craig.
- Changed snmpIfAlias column size to 256. Bug 1127
- Modified MockPollConfig to share code with PollOutageConfigFactory. Bug 1122.
- Write test for and fixed midnight outages in PollOutageConfigManager.
  Bug 1122.
- Fix GETBULK in SnmpIfCollector to handle cases where indices are not
  contiguous.  Fixed ArrayIndexOutOfBound exceptions. Bug 1141
- Add RESOLVED: to body of email and pager msgs.  Unit tests include. Bug 1134.
  Thnx mhuot and bill ayres.
- Fix the /usr/bin/opennms (or /usr/local/bin/opennms) script created by
  opennms.spec.in so that it passes arguments to opennms.sh.  Bug 1136.
  Thanks to Chris Abernethy <opennms@obado.net> for reporting this bug.
- Fix some small documentation bugs.  Bugs 1137 and 1138 and an email to
  opennms-discuss.  Thanks Chris Abernethy <opennms@obado.net> and
  Austin Tuan <ystuan@gmail.com>.
- Fixed notifications so that they use local time instead of GMT time.  Also
  fixed the same problem in the webUI for data like the last service scan time
  on the interface page.  Bug 1114.  Thanks to Bill Ayers <ayres@net.orst.edu>